tests/ui/query_api_sqlite/fail/wrong_table_relation.stderr
error[E0271]: type mismatch resolving `<__Rel_Post_Author as RelationDef>::Source == User`
  --> tests/ui/query_api_sqlite/fail/wrong_table_relation.rs:27:15
   |
27 |         .with(post.author());
   |          ---- ^^^^^^^^^^^^^ type mismatch resolving `<__Rel_Post_Author as RelationDef>::Source == User`
   |          |
   |          required by a bound introduced by this call
   |
note: expected this to be `User`
  --> tests/ui/query_api_sqlite/fail/wrong_table_relation.rs:11:8
   |
11 | struct Post {
   |        ^^^^
note: required by a bound in `drizzle::core::query::QueryBuilder::<V, T, Rels, Cols, Cl>::with`
  --> core/src/query/builder.rs
   |
   |     pub fn with<R, N, C, RCl>(
   |            ---- required by a bound in this associated function
...
   |         R: RelationDef<Source = T> + 'static,
   |                        ^^^^^^^^^^ required by this bound in `QueryBuilder::<V, T, Rels, Cols, Cl>::with`
